<resources>
    <string name="app_name">FinanceApp</string>

    <string name="Income">Income</string>
    <string name="Expense">Expense</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="zero_amount">0.00</string>
    <string name="comment">comment</string>
    <string name="operations">Operations</string>
    <string name="accounts">Accounts</string>
    <string name="analytics">Analytics</string>
    <string name="category">Category</string>
    <string name="account">Account</string>
    <string name="cash">cash</string>
    <string name="card">card</string>
    <string name="account_name">Account name</string>
    <string name="currencyRates" translatable="false">%1$s: %2$.2f   %3$s: %4$.2f</string>
</resources>
